tests/reference/ast-esub2-248f0df.stderr
tokenizer error: Token '~' is not recognized
 --> tests/errors/esub2.f90:3:5
  |
3 | x = ~1
  |     ^ token not recognized

syntax error: Newline is unexpected here
 --> tests/errors/esub2.f90:3:7
  |
3 | x = ~1
  |       ^ 
